Improve question review UI.
* Group the radio buttons according to there hierarchy.
* Add JavaScript code to ensure the selected rationale matches the selected
  answer.

--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -12,7 +12,7 @@
   {% endblock %}
   <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% block inner_form %}{{ form.as_p }}{% endblock %}
     <input type="submit" value="{% block submit_button %}{% trans 'Next' %}{% endblock %}" />
   </form>
 </div>
