--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -2,6 +2,13 @@
 {% load i18n %}
 
 {% block body %}
+{% if messages %}
+<ul class="messages">
+  {% for message in messages %}
+  <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
 <div class="container">
   <h1>{{ assignment.title }} </h1>
   <h2>{% trans 'Question' %} {{ question_index }}</h2>
