Style implementation and accessibility adjustments.

--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>{% block title %}Dalite NG{% endblock %}</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dalite NG">
     <link rel="icon" href="{% static 'favicon.ico' %}">
-
-    <title>{% block title %}Dalite NG{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}"
 
     {% block stylesheets %}{% endblock %}
   </head>
