--- a/peerinst/templates/peerinst/question_review_base.html
+++ b/peerinst/templates/peerinst/question_review_base.html
@@ -8,10 +8,10 @@
   {% endfor %}
 </dl>
 <div id="your-answer">
-  <p>{% trans 'You answered' %} {{ first_choice_label }} {{ second_choice_label }}</p>
+  <p>{% trans 'You answered:' %} <strong>{{ first_choice_label }} {{ second_choice_label }}</strong></p>
   <div id="your-rationale">
     <p>{% trans 'Your rationale:' %}</p>
-    <p>{{ rationale }}</p>
+    <blockquote>{{ rationale }}</blockquote>
   </div>
 </div>
 {% endblock %}
