--- a/peerinst/templates/peerinst/question_review.html
+++ b/peerinst/templates/peerinst/question_review.html
@@ -28,6 +28,8 @@
 </div>
 {% endblock %}
 
+{% block submit_button %}{% trans 'Submit' %}{% endblock %}
+
 {% block scripts %}
   <script src="{% static 'peerinst/js/question_review.js' %}"></script>
 {% endblock %}
