--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Dalite NG">
     <link rel="icon" href="{% static 'favicon.ico' %}">
-    <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}"
+    <link rel="stylesheet" href="{% static 'peerinst/css/main.css' %}">
 
     {% block stylesheets %}{% endblock %}
   </head>
