--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -12,6 +12,7 @@
   </ul>
   {% endif %}
   <div class="container">
+    {% block pretext %}{% endblock %}
     <h2>{{ question.title }}</h2>
     <div id="question-text">
       {{ question.text|safe }}
