Add a link to show all answers of a question to the assignment review page.

--- a/peerinst/templates/admin/peerinst/assignment_results.html
+++ b/peerinst/templates/admin/peerinst/assignment_results.html
@@ -45,7 +45,10 @@
         {% for item in question.data %}
         <td>{{ item }}</td>
         {% endfor %}
-        <td><a href="{{ question.link }}">{% trans 'Show answers' %}</a></td>
+        <td>
+          <a href="{{ question.link_this }}">[{% trans 'this assignment' %}]</a>
+          <a href="{{ question.link_all }}">[{% trans 'all' %}]</a>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
