Allow to set a rationale selection algorithm for each question.
* Add a "rationale_selection_algorithm" field to questions and make it editable
  in the admin interface.
* Add an "expert" field to answers, and add a checkbox to the question preview
  form to mark preseeded answers as expert answers.
* Add a new rationales selection algorithm that gives priority to expert and
  highly voted rationales.  This new algorithm is the default algorithm used
  for all existing questions.

--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -31,7 +31,7 @@
     {% if form %}
     <form action="" method="post">
       {% csrf_token %}
-      {% block inner_form %}{{ form }}{% endblock %}
+      {% block inner_form %}{{ form.as_p }}{% endblock %}
       <div>
         <input type="submit" value="{% block submit_button %}{% trans 'Next' %}{% endblock %}" />
       </div>
