--- a/peerinst/templates/peerinst/question_list.html
+++ b/peerinst/templates/peerinst/question_list.html
@@ -5,7 +5,7 @@
 <h1>{% trans 'Questions' %}</h1>
 <ul>
 {% for obj in object_list %}
-  <li><a href="{% url 'question-start' assignment_id=assignment.pk question_id=obj.pk %}">
+  <li><a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}">
     {{ obj.pk }}
   <a></li>
 {% empty %}
