--- a/peerinst/templates/peerinst/question_review.html
+++ b/peerinst/templates/peerinst/question_review.html
@@ -16,14 +16,12 @@
 {% block inner_form %}
 {{ form.non_field_errors }}
 <div class="rationales">
-  <div class="rationale" id="rationales-0">
-    <div class="rationale-choice">{{ form.second_answer_choice.0 }}</div>
-    <div class="rationale-text-container">{{ form.rationale_choice_0.errors }} {{ form.rationale_choice_0 }}</div>
+  {% for second_answer_choice, rationale_choice in form.rationale_groups %}
+  <div class="rationale" id="rationales-{{ forloop.counter0 }}">
+    <div class="rationale-choice">{{ second_answer_choice }}</div>
+    <div class="rationale-text-container">{{ rationale_choice.errors }} {{ rationale_choice }}</div>
   </div>
-  <div class="rationale" id="rationales-1">
-    <div class="rationale-choice">{{ form.second_answer_choice.1 }}</div>
-    <div class="rationale-text-container">{{ form.rationale_choice_1.errors }} {{ form.rationale_choice_1 }}</div>
-  </div>
+  {% endfor %}
 </div>
 {% endblock %}
 
