Add option to see rationales sequentially during review and vote on them.

--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -138,3 +138,7 @@ li.second-choice{
 .rationale:not(:first-child) {
     border-top: 1px solid lightgray;
 }
+input[type="submit"].thumbs-button {
+    font-size: 150%;
+    font-weight: normal;
+}
