Add lists of fake usernames and fake countries to the admin interface.

--- a/peerinst/templates/admin/peerinst/index.html
+++ b/peerinst/templates/admin/peerinst/index.html
@@ -46,6 +46,16 @@
             {% trans 'Users' %}
         </a></p>
       </div>
+      <div class="grp-row">
+        <p><a href="{% url 'fake-usernames' %}">
+            {% trans 'Fake usernames' %}
+        </a></p>
+      </div>
+      <div class="grp-row">
+        <p><a href="{% url 'fake-countries' %}">
+            {% trans 'Fake countries' %}
+        </a></p>
+      </div>
     </div>
   </div>
 </div>
