Add pages for attribution bias analysis to the admin interface.

--- a/peerinst/templates/admin/peerinst/index.html
+++ b/peerinst/templates/admin/peerinst/index.html
@@ -56,6 +56,11 @@
             {% trans 'Fake countries' %}
         </a></p>
       </div>
+      <div class="grp-row">
+        <p><a href="{% url 'attribution-analysis' %}">
+            {% trans 'Attribution bias analysis' %}
+        </a></p>
+      </div>
     </div>
   </div>
 </div>
