--- a/peerinst/templates/peerinst/question_sequential_review.html
+++ b/peerinst/templates/peerinst/question_sequential_review.html
@@ -21,8 +21,8 @@
     <p>{{ current_rationale.2 }}</p>
   </div>
   <div>
-    <input type="submit" class="thumbs-button" name="upvote" value="👍" />
-    <input type="submit" class="thumbs-button" name="downvote" value="👎" />
+    <input type="submit" class="thumbs-button thumbs-up" name="upvote" value="Thumbs up" />
+    <input type="submit" class="thumbs-button thumbs-down" name="downvote" value="Thumbs down" />
   </div>
 </form>
 {% endblock %}
