--- a/peerinst/templates/admin/peerinst/question_rationales.html
+++ b/peerinst/templates/admin/peerinst/question_rationales.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n staticfiles grp_tags %}
 
-{% block title %}{% trans 'Question rationales' %}{% endblock %}
+{% block title %}{{ question.title }}: {% blocktrans %}Top {{ perpage }} Rationales{% endblocktrans %}{% endblock %}
 
 {% block extrastyle %}
 <link href="{% static 'peerinst/css/admin.css' %}" rel="stylesheet" type="text/css" />
@@ -10,13 +10,14 @@
 {% block breadcrumbs %}
 <ul>
   <li><a href="{% url 'admin-index' %}">{% trans 'Home' %}</a></li>
-  <li><a href="{% url 'assignment-results' assignment_id=assignment.identifier %}">{% trans 'results' %}</a></li>
-  <li>{{ question.title }} {% trans 'rationales' %}</li>
+  <li><a href="{% url 'assignment-results' assignment_id=assignment.identifier %}">{{ assignment.identifier }}</a></li>
+  <li><a href="{% url 'question-preview' question_id=question.id %}">{{ question }}</a></li>
+  <li>{% blocktrans %}Top {{ perpage }} rationales {% endblocktrans %}</li>
 </ul>
 {% endblock %}
 
 {% block content_title %}
-<h1>{% trans 'Rationales for answers to ' %} {{ question.title }}</h1>
+<h1>{% blocktrans %}Top {{ perpage }} rationales for answers to {{ question }}{% endblocktrans %}</h1>
 {% endblock %}
 
 {% block content %}
