Shows the question/answers summary table twice on the page,
Once as a normal HTML table, and again wrapped inside a textarea.

Clicking the text area automatically selects the text inside, to make copy/pasting easier.

--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -155,3 +155,10 @@ input[type="submit"].thumbs-down {
 .votable-rationale q {
     font-style: italic;
 }
+.share-question-answers-summary label {
+    font-weight: bold;
+}
+.share-question-answers-summary textarea {
+    width: 50%;
+    height: 100px;
+}
