--- a/peerinst/templates/peerinst/question_answers_summary.html
+++ b/peerinst/templates/peerinst/question_answers_summary.html
@@ -1,38 +1,22 @@
 {% extends 'peerinst/base.html' %}
 {% load i18n %}
+{% load static %}
 {% block title %}{{ question.title }}{% endblock %}
 {% block body %}
-    <h1>Answer Analysis - {{ question.title }}</h1>
-    <h2>Analytics</h2>
-    <div class="meta-container">
-        <table style="width:100%">
-            <thead>
-                <tr>
-                    {% for column in columns %}
-                        <th>{{ column.label }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for answer in answer_rows %}
-                    <tr>
-                        {% for column in answer %}
-                            <td>{{ column }}</td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-    <h2>Top Rationales by Answer</h2>
-    <div class="meta-container">
-        {% for answer_option in answer_rationales %}
-            {% if answer_option.rationales %}
-                <h3>{{ answer_option.label}}</h3>
-                {% for rationale in answer_option.rationales %}
-                    <ol>{{ rationale.count }} - {{ rationale.text }}</ol>
-                {% endfor %}
-            {% endif %}
-        {% endfor %}
-    </div>
+<!-- Show the summary table-->
+<div class="question-answers-summary">
+{% include 'peerinst/_question_answers_summary.html' %}
+</div>
+
+<!-- Show the HTML itself in a non-editable textarea, so course teams can copy-paste and share it.-->
+<div class="share-question-answers-summary">
+<label>Click below to select the HTML table, and copy to share the results.</br>
+<textarea readonly="readonly">
+{% include 'peerinst/_question_answers_summary.html' %}
+</textarea></label>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script src="{% static 'peerinst/js/question_answers_summary.js' %}"></script>
 {% endblock %}
