--- a/peerinst/templates/admin/peerinst/index.html
+++ b/peerinst/templates/admin/peerinst/index.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <h1>{% trans 'Dalite NG administration' %}</h1>
+<a href="{% url 'assignment-list' %}">Back to main site</a>
 <div class="g-d-c">
   <div class="g-d-12 g-d-f">
    <div class="grp-module">
