--- a/peerinst/templates/peerinst/question_list.html
+++ b/peerinst/templates/peerinst/question_list.html
@@ -3,10 +3,13 @@
 
 {% block body %}
 <h1>{% trans 'Questions' %}</h1>
+{% if user.is_staff %}
+  <div style="margin-top:-16pt;margin-bottom:12pt;font-size:9pt;opacity:0.6;"><a href="{% url 'admin_index_wrapper' %}" style="text-decoration:none;">Click here to add or edit content</a></div>
+{% endif %}
 <ul>
 {% for obj in object_list %}
-  <li><a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}">
-    {{ obj.pk }}
+  <li>{{ forloop.counter }}. <a href="{% url 'question' assignment_id=assignment.pk question_id=obj.pk %}">
+    {{ obj.title }}
   </a></li>
 {% empty %}
   <li>{% trans 'No questions available.' %}</li>
