--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -1,7 +1,6 @@
 {% extends 'peerinst/base.html' %}
 {% load i18n %}
 
-{% block title %}{{ question.title }}{% endblock %}
 {% block body %}
 <div class="meta-container">
   {% if messages %}
@@ -13,6 +12,10 @@
   {% endif %}
   <div class="container">
     {% block pretext %}{% endblock %}
+    <h1>{{ question.title }}</h1>
+    {% if user.is_staff %}
+      <div style="margin-top:-16pt;margin-bottom:12pt;font-size:9pt;opacity:0.6;"><a href="{% url 'admin:peerinst_question_change' question.id %}" style="text-decoration:none;">Edit question</a></div>
+    {% endif %}
     <div id="question-text">
       {{ question.text|safe }}
     </div>
