non-staff version of site with separate login

--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -28,8 +28,10 @@
       <div><a href="https://www.saltise.ca/projects/mydalite/"><img src="{% static 'peerinst/img/logo.png' %}" alt="SALTISE.S4-logo" id="logo"></a> <a href="{% url 'assignment-list' %}" style="text-decoration:none;color:white;"><span style="font-family: 'Cardo', serif; font-style:italic;">my</span><span style="font-family: 'Montserrat', sans serif;text-transform:uppercase;">Dalite</span></a></div>
       <div style="text-align:center;font-size:10pt;"></div>
       <div style="text-align:right;font-size:10pt;line-height:1.2;">
+        {% if user.is_authenticated %}
         User: {{ request.user.username }}<br>
-        <a href="{% url 'admin:logout' %}" style="color:white;font-weight:bold;text-decoration:none;">Logout</a>
+        <a href="{% url 'logout' %}" style="color:white;font-weight:bold;text-decoration:none;">Logout</a>
+        {% endif %}
       </div>
       </div>
     </header>
