--- a/peerinst/templates/peerinst/assignment_list.html
+++ b/peerinst/templates/peerinst/assignment_list.html
@@ -4,7 +4,7 @@
 {% block body %}
 <h1>{% trans 'Assignments' %}</h1>
 {% if user.is_staff %}
-  <div style="margin-top:-16pt;margin-bottom:12pt;font-size:9pt;opacity:0.6;"><a href="{% url 'admin_index_wrapper' %}" style="text-decoration:none;">Click here to add or edit content</a></div>
+  <div class="admin-link"><a href="{% url 'admin_index_wrapper' %}">Click here to add or edit content</a></div>
 {% endif %}
 <ul>
 {% for obj in object_list %}
