--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -23,7 +23,16 @@
 
     <!-- Custom header for local instance of dalite-ng -->
     <header>
-      {% include 'peerinst/custom-instance-header.html' %}
+      <div class="wrapper">
+        <div><a href="https://www.saltise.ca/projects/mydalite/"><img src="{% static 'peerinst/img/logo.png' %}" alt="site-logo" id="logo"></a> <a href="{% url 'assignment-list' %}" style="color:white;">{% include 'peerinst/custom-instance-header.html' %}</a></div>
+        <div style="text-align:center;font-size:10pt;"></div>
+        <div style="text-align:right;font-size:10pt;line-height:1.2;">
+          {% if user.is_authenticated %}
+          User: {{ request.user.username }}<br>
+          <a href="{% url 'logout' %}" style="color:white;font-weight:bold;">Logout</a>
+          {% endif %}
+        </div>
+      </div>
     </header>
 
     <div class="site-content">
