--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -24,7 +24,7 @@
     <!-- Custom header for local instance of dalite-ng -->
     <header>
       <div class="wrapper">
-        <div><a href="https://www.saltise.ca/projects/mydalite/"><img src="{% static 'peerinst/img/logo.png' %}" alt="site-logo" id="logo"></a> <a href="{% url 'assignment-list' %}" style="color:white;">{% include 'peerinst/custom-instance-header.html' %}</a></div>
+        <div><a href="{% include 'peerinst/custom-instance-link.html' %}"><img src="{% static 'peerinst/img/logo.png' %}" alt="site-logo" id="logo"></a> <a href="{% url 'assignment-list' %}" style="color:white;">{% include 'peerinst/custom-instance-header.html' %}</a></div>
         <div style="text-align:center;font-size:10pt;"></div>
         <div style="text-align:right;font-size:10pt;line-height:1.2;">
           {% if user.is_authenticated %}
