Add possibility to reset answers while testing questions

--- a/peerinst/templates/peerinst/question_start.html
+++ b/peerinst/templates/peerinst/question_start.html
@@ -14,7 +14,10 @@
     {% block pretext %}{% endblock %}
     <h1>{{ question.title }}</h1>
     {% if user.is_staff %}
-      <div class="admin-link"><a href="{% url 'admin:peerinst_question_change' question.id %}">Edit question</a></div>
+      <div class="admin-link">
+        <a href="{% url 'admin:peerinst_question_change' question.id %}">Edit question</a>
+        <span style="padding-left:0.5em;padding-right:0.5em;">|</span><a href="{% url 'reset-question' assignment_id=assignment.pk question_id=question.id %}">Reset answers</a>
+      </div>
     {% endif %}
     <div id="question-text">
       {{ question.text|safe }}
