--- a/peerinst/templates/peerinst/assignment_list.html
+++ b/peerinst/templates/peerinst/assignment_list.html
@@ -6,13 +6,33 @@
 {% if user.is_staff %}
   <div class="admin-link"><a href="{% url 'admin_index_wrapper' %}">Click here to add or edit content</a></div>
 {% endif %}
+<div class="search">
+  Search: <input type="text" onchange="search()" id="search-bar"></input>
+</div>
 <ul>
 {% for obj in object_list %}
-  <li>{{ forloop.counter }}. <a href="{% url 'question-list' assignment_id=obj.pk %}">
+  <li id="{{ obj.title }}" name="item">{{ forloop.counter }}. <a href="{% url 'question-list' assignment_id=obj.pk %}">
     {{ obj.title }}
   </a></li>
 {% empty %}
   <li>{% trans 'No assignments available.' %}</li>
 {% endfor %}
 </ul>
+
+<script>
+  function search(){
+    var search_string = document.getElementById('search-bar').value;
+    var items = document.getElementsByName('item');
+    for (var i=0; i<items.length; i++) {
+      if (items[i].id.toLowerCase().indexOf(search_string.toLowerCase()) < 0) {
+        items[i].style.display = "none";
+      }
+      else {
+        items[i].style.display = "block";
+      }
+    }
+    return;
+  }
+</script>
+
 {% endblock %}
