--- a/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
+++ b/custom-settings/SALTISES4/static/peerinst/css/custom-instance.css
@@ -8,6 +8,7 @@ header {
   background-color: #54c0db;
 }
 h1 {
+  color: #54c0db;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   font-size: 24pt;
